WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187740
RELEASE_ASSERT() under IPC::Connection::sendSync() from PluginProxy::supportsSnapshotting()
https://bugs.webkit.org/show_bug.cgi?id=187740
Summary
RELEASE_ASSERT() under IPC::Connection::sendSync() from PluginProxy::supports...
Chris Dumez
Reported
2018-07-17 15:02:21 PDT
RELEASE_ASSERT() under IPC::Connection::sendSync() from PluginProxy::supportsSnapshotting(): Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x00007fff56e077c4 bool IPC::Connection::sendSync<Messages::PluginControllerProxy::SupportsSnapshotting>(Messages::PluginControllerProxy::SupportsSnapshotting&&, Messages::PluginControllerProxy::SupportsSnapshotting::Reply&&, unsigned long long, WTF::Seconds, WTF::OptionSet<IPC::SendSyncOption>) + 330 1 com.apple.WebKit 0x00007fff56c9ac89 WebKit::PluginProxy::supportsSnapshotting() const + 85 2 com.apple.WebKit 0x00007fff56caf3c5 WebKit::PluginView::shouldNotAddLayer() const + 27 3 com.apple.WebCore 0x00007fff565da061 WebCore::RenderLayerBacking::updateConfiguration() + 1297 4 com.apple.WebCore 0x00007fff565d586c WebCore::RenderLayerCompositor::layerStyleChanged(WebCore::StyleDifference, WebCore::RenderLayer&, WebCore::RenderStyle const*) + 76 5 com.apple.WebCore 0x00007fff5521d01d WebCore::RenderLayer::styleChanged(WebCore::StyleDifference, WebCore::RenderStyle const*) + 1085 6 com.apple.WebCore 0x00007fff5521c15c WebCore::RenderLayerModelObject::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) + 732 7 com.apple.WebCore 0x00007fff5521b33b WebCore::RenderBox::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) + 43 8 com.apple.WebCore 0x00007fff552c7612 WebCore::RenderReplaced::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) + 18 9 com.apple.WebCore 0x00007fff552cddbe WebCore::RenderWidget::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) + 14 10 com.apple.WebCore 0x00007fff5658d061 WebCore::RenderElement::setStyle(WebCore::RenderStyle&&, WebCore::StyleDifference) + 209 11 com.apple.WebCore 0x00007fff566dd581 WebCore::RenderTreeUpdater::updateElementRenderer(WebCore::Element&, WebCore::Style::ElementUpdate const&) + 673 12 com.apple.WebCore 0x00007fff566dc90d WebCore::RenderTreeUpdater::updateRenderTree(WebCore::ContainerNode&) + 1021 13 com.apple.WebCore 0x00007fff566dc46b WebCore::RenderTreeUpdater::commit(std::__1::unique_ptr<WebCore::Style::Update const, std::__1::default_delete<WebCore::Style::Update const> >) + 619 14 com.apple.WebCore 0x00007fff55f56e9a WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) + 1018 15 com.apple.WebCore 0x00007fff5522c81a WebCore::Document::updateStyleIfNeeded() + 282 16 com.apple.WebCore 0x00007fff5630c6cc WebCore::FrameViewLayoutContext::layout() + 620 17 com.apple.WebCore 0x00007fff55208c10 WebCore::ThreadTimers::sharedTimerFiredInternal() + 336 18 com.apple.WebCore 0x00007fff55208aaf WebCore::timerFired(__CFRunLoopTimer*, void*) + 31 19 com.apple.CoreFoundation 0x00007fff47ae4b4e __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 20 20 com.apple.CoreFoundation 0x00007fff47ae46f3 __CFRunLoopDoTimer + 865 21 com.apple.CoreFoundation 0x00007fff47ae42d4 __CFRunLoopDoTimers + 333 22 com.apple.CoreFoundation 0x00007fff47adcb4a __CFRunLoopRun + 2182 23 com.apple.CoreFoundation 0x00007fff47adc0a7 CFRunLoopRunSpecific + 463 24 com.apple.Foundation 0x00007fff49eba891 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 280 25 com.apple.Foundation 0x00007fff49eba766 -[NSRunLoop(NSRunLoop) run] + 76 26 libxpc.dylib 0x00007fff74e39f4e _xpc_objc_main + 567 27 libxpc.dylib 0x00007fff74e38ba5 xpc_main + 443 28 com.apple.WebKit.WebContent 0x1014e563f main + 547 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/WebKit2/WebKit2-7606.1.20.40.2/Shared/EntryPointUtilities/mac/XPCService/XPCServiceMain.mm:160) 29 libdyld.dylib 0x00007fff74befb11 start + 1
Attachments
Patch
(2.03 KB, patch)
2018-07-17 15:54 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.81 MB, application/zip)
2018-07-17 17:13 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-07-17 15:02:41 PDT
<
rdar://problem/41818955
>
Chris Dumez
Comment 2
2018-07-17 15:54:12 PDT
Created
attachment 345202
[details]
Patch
EWS Watchlist
Comment 3
2018-07-17 17:13:27 PDT
Comment on
attachment 345202
[details]
Patch
Attachment 345202
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8568434
New failing tests: http/tests/security/canvas-remote-read-remote-video-blocked-no-crossorigin.html
EWS Watchlist
Comment 4
2018-07-17 17:13:39 PDT
Created
attachment 345210
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 5
2018-07-17 20:43:44 PDT
Comment on
attachment 345202
[details]
Patch Clearing flags on attachment: 345202 Committed
r233904
: <
https://trac.webkit.org/changeset/233904
>
WebKit Commit Bot
Comment 6
2018-07-17 20:43:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug